--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,7 +16,7 @@
           <h5 class="card-title">TinyURL for: <%= longURL %></h5>
           <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p> 
           <!-- skipped the part on including a link for creating a new url-->
-
+<div><form action="submit" input="text">Edit</form></div>
         </div>
       <div class="card-footer text-muted"></div>
     </div>
