--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,29 +17,35 @@
   <main style="margin: 1em;">
 
     <h3>My URLs</h3>
-    
+
     <table class="table">
       <thead>
-        <tr>   
+        <tr>
           <th scope="col"> Short URL</th>
           <th scope="col"> Long URL</th>
-         </tr>
+        </tr>
       </thead>
       <tbody>
         <% for(let url in urls) { %>
-        </td><tr>
+        </td>
+        <tr>
           <td><%= url %></td>
-          <td><%= urls[url] %>  </td>
-         <td> <form method="POST" action="/urls/<%= url %>/delete">     <!-- The code from compass was only for one short url. The one we have added as url will extend to all short urls created-->
-          <button type="submit" class="btn btn-danger">Delete</button>
-        </form>
-         </td>
-         <td><form method="POST" action="/urls/<%= url %>/edit"> <button type="submit" class="btn btn-primary">Edit</button>
-        </form>
-      </td>
-       </tr>
-    <% } %>
- </tbody>
+          <td><%= urls[url] %> </td>
+          <td>
+            <form method="POST" action="/urls/<%= url %>/delete">
+              <!-- The code from compass was only for one short url. The one we have added as url will extend to all short urls created-->
+              <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
+          </td>
+          <td>
+            <a href="/urls/<%= url %>">
+              <button class="btn btn-primary">Edit</button>
+            </a>
+
+          </td>
+        </tr>
+        <% } %>
+      </tbody>
     </table>
   </main>
   <!-- Bootstrap JS -->
