--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,6 +8,10 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/urls">My URLs</a>
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+          <form method="POST" action=""></form>
+          <label for=""></label>
+          <input type="text" name="username">
+          <button type="submit">Submit</button>
         </div>
       </div>
     </nav>
