corrected the form tag. The closing tag was misplaced

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,10 +8,11 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/urls">My URLs</a>
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-          <form method="POST" action=""></form>
+          <form method="POST" action="/urls/login">
           <label for=""></label>
           <input type="text" name="username">
           <button type="submit">Submit</button>
+          </form>
         </div>
       </div>
     </nav>
