--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -39,7 +39,7 @@
           </td>
           <td>
             <a href="/urls/<%= url %>">
-              <button class="btn btn-primary">Edit</button>
+              <button type="button" class="btn btn-warning">Edit</button>
             </a>
 
           </td>
