--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 
 <body>
 
- 
+    <% include partials/_header %>
   <div class="card text-center">
     <div class="card-header"></div>
     <div class="card-body">
