--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,15 +1,27 @@
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-success">
-      <a class="navbar-brand" href="/urls" style="font-family: cursive;">TinyApp</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav" style="display: flex; flex: 1; align-items: center; justify-content: space-between;">
+  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+    <a class="navbar-brand" href="/urls" style="font-family: cursive;">TinyApp</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav" style="display: flex; flex: 1; align-items: center; justify-content: space-between;">
         <a class="nav-item nav-link" href="/urls" style="font-family: cursive;">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new" style="font-family: cursive;">Create New URL</a>
 
-        </div>
+        <% if (user) { %>
+        <span> <%= user.email %> </span>
+        <a href="/urls" class="btn btn-info" style="border-color: black">Log Out</a>
+        <% } else { %>
+        <a class="nav-item nav-link btn btn-info" href="/register" style="font-family: cursive; color: aliceblue; border-color: black">Sign
+          Up</a>
+        <a class="nav-item nav-link btn btn-info" href="/login" style="font-family: cursive; color: aliceblue; border-color: black">Log
+          In</a>
+        <%  } %>
+
+
       </div>
-    </nav>
-  </header>
+    </div>
+  </nav>
+</header>
