changed the style and new row titles for delete and edit. Swapped the position of delete and edit keys.

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -16,13 +16,15 @@
   </header>
   <main style="margin: 1em;">
 
-    <h3>My URLs</h3>
+    <h3 style="font-family: cursive">My URLs</h3>
 
     <table class="table">
       <thead>
         <tr>
-          <th scope="col"> Short URL</th>
-          <th scope="col"> Long URL</th>
+          <th scope="col" style="font-family: cursive"> Short URL</th>
+          <th scope="col" style="font-family: cursive"> Long URL</th>
+          <th scope="col" style="font-family: cursive"> Edit</th>
+          <th scope="col" style="font-family: cursive"> Delete</th>
         </tr>
       </thead>
       <tbody>
@@ -34,12 +36,12 @@
           <td>
             <form method="POST" action="/urls/<%= url %>/delete">
               <!-- The code from compass was only for one short url. The one we have added as url will extend to all short urls created-->
-              <button type="submit" class="btn btn-danger">Delete</button>
+              <button type="submit" class="btn btn-warning" style="border-color: black; font-family: cursive">Edit</button>
             </form>
           </td>
           <td>
             <a href="/urls/<%= url %>">
-              <button type="button" class="btn btn-warning">Edit</button>
+              <button type="button" class="btn  btn-danger" style="border-color: black; font-family: cursive">Delete</button>
             </a>
 
           </td>
