Changed the font and style of the titles

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,7 +12,7 @@
 
         <% if (user) { %>
         <span> <%= user.email %> </span>
-        <a href="/urls" class="btn btn-info" style="border-color: black">Log Out</a>
+        <a href="/" class="btn btn-info" style="border-color: black">Log Out</a>
         <% } else { %>
         <a class="nav-item nav-link btn btn-info" href="/register" style="font-family: cursive; color: aliceblue; border-color: black">Sign
           Up</a>
