Inline css changed to make links lineup on the right of the navbar

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,12 +1,15 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls" style="font-family: cursive;">TinyApp</a>
+    <span style="flex: 1">
+
+    </span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav" style="display: flex; flex: 1; align-items: center; justify-content: space-between;">
+    <div class="collapse navbar-collapse " id="navbarNavAltMarkup" style="flex: none">
+      <div class="navbar-nav" style="display: flex; align-items: center; justify-content: space-between;">
         <a class="nav-item nav-link" href="/urls" style="font-family: cursive;">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new" style="font-family: cursive;">Create New URL</a>
 
@@ -19,14 +22,14 @@
           <a
             class="nav-item nav-link btn btn-info"
             href="/register"
-            style="font-family: cursive; color: aliceblue; border-color: black"
+            style="font-family: cursive; color: aliceblue; border-color: black; margin-left: 0.5em"
           >
             Sign Up
           </a>
           <a
             class="nav-item nav-link btn btn-info"
             href="/login"
-            style="font-family: cursive; color: aliceblue; border-color: black"
+            style="font-family: cursive; color: aliceblue; border-color: black; margin-left: 0.5em"
           >
             Log In
           </a>
