The sign up botton position changed to align with input boxes

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -27,8 +27,7 @@
         <!--The data in the for and id should match -->
         <input type="password" id="password" name="password" required style="margin-left: 3em;">
       </label>
-
-
+<span style="text-align: left; margin-bottom: 0.2em;">
       <button
         type="submit"
         class="btn btn-info"
@@ -37,6 +36,7 @@
         Signup
       </button>
     </form>
+  </span>
     <!-- the button type should be submit-->
 
   </div>
