Fixed the bug in the header

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,7 +32,7 @@
         </td>
         <tr>
           <td><%= url %></td>
-          <td><%= urls[url] %> </td>
+          <td><%= urls[url].longURL %> </td>
           <td>
               <a href="/urls/<%= url %>">
               <!-- The code from compass was only for one short url. The one we have added as url will extend to all short urls created-->
