Changed css of the logout button and submit button

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -31,8 +31,8 @@
         <% for(let url in urls) { %>
         </td>
         <tr>
-          <td><%= url %></td>
-          <td><%= urls[url].longURL %> </td>
+          <td style="font-family: cursive"><%= url %></td>
+          <td style="font-family: cursive"><%= urls[url].longURL %> </td>
           <td>
               <a href="/urls/<%= url %>">
               <!-- The code from compass was only for one short url. The one we have added as url will extend to all short urls created-->
