--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,4 +1,5 @@
 <header>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls" style="font-family: cursive;">TinyApp</a>
     <span style="flex: 1">
